--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "website",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://kelleyliu.github.io/website",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "animate.css": "^4.1.0",
     "bootstrap": "^4.4.1",
+    "gh-pages": "^2.2.0",
     "mdbreact": "^4.26.0",
     "react": "^16.13.1",
     "react-animate-on-scroll": "^2.1.5",
@@ -22,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
