--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "website",
+  "name": "personal site",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://kelleyliu.github.io/website",
+  "homepage": "http://kelleyliu.github.io/webiste",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
