--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "personal site",
+  "name": "website",
   "version": "0.1.0",
   "private": true,
   "homepage": "http://kelleyliu.github.io/webiste",
