--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^3.10.0",
     "react-lazy-load-image-component": "^1.4.3",
     "react-router-dom": "^5.1.2",
+    "react-router-hash-link": "^1.2.2",
     "react-scripts": "3.4.1"
   },
   "scripts": {
